<resources>
	<string name="app_name">Andor\'s Trail</string>
	<string name="app_description">Quest-driven fantasy RPG</string>
	<string name="exit">Exit</string>
	<string name="exit_to_menu">Exit to menu</string>
	<string name="menu_pause">Pause</string>
	<string name="menu_settings">Preferences</string>
	<string name="menu_save">Save</string>
	<string name="menu_load">Load</string>
	<string name="menu_save_gamesaved">Game was saved to slot %1$d</string>
	<string name="menu_save_failed">Failed to save game! Is the SD card mounted and writable?</string>
	<string name="loadsave_title_save">Save game</string>
	<string name="loadsave_title_load">Load saved game</string>
	<string name="loadsave_selectslot">Select slot</string>
	<string name="loadsave_slot_empty">(empty)</string>
	<string name="savegame_currenthero_displayinfo">level %1$d, %2$d exp, %3$d gold</string>
	<string name="dialog_loading_message">Loading resources…</string>
	<string name="dialog_loading_failed_title">Load Failed</string>
	<string name="dialog_loading_failed_message">Andor\'s Trail was unable to load the savegame file.\n\n:(\n\nThe file may be damaged or incomplete.</string>
	<string name="dialog_loading_failed_incorrectversion">Andor\'s Trail was unable to load the savegame file. This savegame file is created with a newer version than what is currently running.</string>
	<string name="dialog_close">Close</string>
	<string name="dialog_confirmexit_title">Exit</string>
	<string name="dialog_confirmexit_message">Are you sure you want to exit?</string>
	<string name="dialog_paused_title">Paused</string>
	<string name="dialog_paused_message">Game is paused</string>
	<string name="dialog_paused_resume">Resume</string>
	<string name="dialog_monsterencounter_title">Encounter</string>
	<string name="dialog_monsterencounter_message">Do you want to attack?\nDifficulty: %1$s</string>
	<string name="dialog_monsterencounter_info">Info</string>
	<string name="status_hp">HP:</string>
	<string name="status_mp">MP:</string>
	<string name="status_ap">AP:</string>
	<string name="status_exp">Level:</string>
	<string name="heroinfo_char">Overview</string>
	<string name="heroinfo_inv">Items</string>
	<string name="heroinfo_wear">Equipped</string>
	<string name="heroinfo_skill">Skills</string>
	<string name="heroinfo_spell">Spells</string>
	<string name="heroinfo_levelup">Level up</string>
	<string name="heroinfo_level">Level</string>
	<string name="heroinfo_totalexperience">Total experience</string>
	<string name="heroinfo_wornequipment">Worn equipment</string>
	<string name="heroinfo_inventory">Inventory</string>
	<string name="heroinfo_gold">Gold: %1$d</string>
	<string name="heroinfo_actionpoints">Action points (AP):</string>
	<string name="heroinfo_quests">Quests</string>
	<string name="combat_attack">Attack (%1$d AP)</string>
	<string name="combat_move">Move (%1$d AP)</string>
	<string name="combat_use">Use item</string>
	<string name="combat_spell">Spell</string>
	<string name="combat_endturn">End turn</string>
	<string name="combat_flee">Flee</string>
	<string name="combat_begin_flee">You can now flee combat by clicking in the direction you want to move.</string>
	<string name="combat_flee_failed">You failed to flee!</string>
	<string name="combat_status_ap">AP: %1$d</string>
	<string name="combat_monsterhealth">HP:</string>
	<string name="combat_monsteraction">%1$s is attacking.</string>
	<string name="combat_result_monstermiss">%1$s misses!</string>
	<string name="combat_result_monsterhit">%1$s hits you for %2$d hp!</string>
	<string name="combat_result_monsterhitcritical">%1$s gets a critical hit for %2$d hp!</string>
	<string name="combat_result_heromiss">Your attack misses.</string>
	<string name="combat_result_herohit">You hit %1$s for %2$d hp!</string>
	<string name="combat_result_herohitcritical">You get a critical hit on %1$s for %2$d hp!</string>
	<string name="combat_result_herokillsmonster">%1$s dies!</string>
	<string name="combat_not_enough_ap">Not enough AP left this round.</string>
	<string name="combat_hero_dies">You fall unconscious, but fortunately wake up alive, dazed and fatigued. You lost %1$d experience.</string>
	<string name="inventory_info">Info</string>
	<string name="inventory_equip">Equip</string>
	<string name="inventory_unequip">Unequip</string>
	<string name="inventory_use">Use</string>
	<string name="inventory_drop">Drop</string>
	<string name="inventory_item_used">You used %1$s.</string>
	<string name="inventory_item_dropped">%1$s was dropped.</string>
	<string name="inventory_item_equipped">You equipped %1$s.</string>
	<string name="dialog_loot_pickall">Pick up all</string>
	<string name="dialog_loot_foundgold">You found %1$d gold. </string>
	<string name="dialog_loot_pickedupitem">You picked up an item. </string>
	<string name="dialog_loot_pickedupitems">You picked up %1$d items. </string>
	<string name="dialog_groundloot_title">Items</string>
	<string name="dialog_groundloot_message">You found some items. </string>
	<string name="dialog_monsterloot_title">Victory</string>
	<string name="dialog_monsterloot_message">You survived the encounter. </string>
	<string name="dialog_monsterloot_gainedexp">You gained %1$d experience. </string>
	<string name="monster_difficulty_veryeasy">Very easy</string>
	<string name="monster_difficulty_easy">Easy</string>
	<string name="monster_difficulty_normal">Normal</string>
	<string name="monster_difficulty_hard">Hard</string>
	<string name="monster_difficulty_veryhard">Very hard</string>
	<string name="monster_difficulty_impossible">Impossible</string>
	<string name="actorinfo_class">Class:</string>
	<string name="actorinfo_difficulty">Difficulty:</string>
	<string name="actorinfo_health">Health:</string>
	<string name="actorinfo_attacksperturn">Attacks/turn:</string>
	<string name="actorinfo_movesperturn">Movement/turn:</string>
	<string name="actorinfo_attack">Attack:</string>
	<string name="actorinfo_criticalhit">Critical hit:</string>
	<string name="actorinfo_defense">Defense:</string>
	<string name="actorinfo_movecost">Move cost (AP):</string>
	<string name="actorinfo_basetraits">Base combat statistics (without equipment and skills)</string>
	<string name="actorinfo_currenttraits">Combat statistics (current)</string>
	<string name="traitsinfo_attack_cost">Attack cost (AP):</string>
	<string name="traitsinfo_attack_chance">Attack chance:</string>
	<string name="traitsinfo_attack_damage">Attack damage:</string>
	<string name="traitsinfo_criticalhit_skill">Critical hit skill:</string>
	<string name="traitsinfo_criticalhit_multiplier">Critical multiplier:</string>
	<string name="traitsinfo_defense_chance">Block chance:</string>
	<string name="traitsinfo_defense_damageresist">Damage resistance:</string>
	<string name="iteminfo_category">Category: </string>
	<string name="iteminfo_action_use">Use</string>
	<string name="iteminfo_action_equip">Equip</string>
	<string name="iteminfo_action_unequip">Unequip</string>
	<string name="iteminfo_action_use_ap">Use (%1$d AP)</string>
	<string name="iteminfo_action_equip_ap">Equip (%1$d AP)</string>
	<string name="iteminfo_action_unequip_ap">Unequip (%1$d AP)</string>
	<string name="itemcategory_money">Money</string>
	<string name="itemcategory_weapon">Weapon</string>
	<string name="itemcategory_shield">Shield</string>
	<string name="itemcategory_wearable_head">Wearable (head)</string>
	<string name="itemcategory_wearable_body">Wearable (body)</string>
	<string name="itemcategory_wearable_hand">Wearable (hands)</string>
	<string name="itemcategory_wearable_feet">Wearable (feet)</string>
	<string name="itemcategory_wearable_neck">Wearable (neck)</string>
	<string name="itemcategory_wearable_ring">Wearable (ring)</string>
	<string name="itemcategory_potion">Potion</string>
	<string name="itemcategory_other">Other</string>
	<string name="startscreen_continue">Continue current game</string>
	<string name="startscreen_newgame">New game</string>
	<string name="startscreen_newgame_confirm">You will lose your current game and your current character, are you sure you want to start a new game?</string>
	<string name="startscreen_about">About/help</string>
	<string name="startscreen_enterheroname">Enter hero name</string>
	<string name="startscreen_load">Load</string>
	<string name="conversation_rewardexp"> [You gained %1$d experience]</string>
	<string name="conversation_rewardgold"> [You gained %1$d gold]</string>
	<string name="conversation_lostgold"> [You lost %1$d gold]</string>
	<string name="conversation_rewarditem"> [You gained an item]</string>
	<string name="conversation_rewarditems"> [You gained %1$d items]</string>
	<string name="conversation_next">Next</string>
	<string name="conversation_leave">Leave</string>
	<string name="shop_buy">Buy</string>
	<string name="shop_sell">Sell</string>
	<string name="shop_infoitem">Info</string>
	<string name="shop_buyitem">Buy (%1$d gold)</string>
	<string name="shop_sellitem">Sell (%1$d gold)</string>
	<string name="shop_yourgold">Your gold: %1$d</string>
	<string name="shop_item_bought">%1$s bought.</string>
	<string name="shop_item_sold">%1$s sold.</string>
	<string name="levelup_title">Level up</string>
	<string name="levelup_description">Welcome to level %1$d!</string>
	<string name="levelup_buttontext">Level up</string>
	<string name="levelup_add_health">Increase health (+%1$d HP)</string>
	<string name="levelup_add_health_description">Adds %1$d to your maximum health.</string>
	<string name="levelup_add_attackchance">Increase attack chance (+%1$d %%)</string>
	<string name="levelup_add_attackchance_description">Adds %1$d%% to your base attack chance.</string>
	<string name="levelup_add_attackdamage">Increase attack damage (+%1$d)</string>
	<string name="levelup_add_attackdamage_description">Adds %1$d to your base attack damage.</string>
	<string name="levelup_add_blockchance">Increase block chance (+%1$d %%)</string>
	<string name="levelup_add_blockchance_description">Adds %1$d%% to your base block chance.</string>
	<string name="dialog_rest_title">Rest</string>
	<string name="dialog_rest_confirm_message">Do you want to rest here?</string>
	<string name="dialog_rest_message">You have rested and regained your full health.</string>
	<string name="about_button1">Help</string>
	<string name="about_button2">Authors</string>
	<string name="about_button3">License</string>
	<string name="actorinfo_currentconditions">Active conditions</string>
	<string name="iteminfo_effect_increase_max_hp">Raises max HP +%1$d</string>
	<string name="iteminfo_effect_increase_max_ap">Raises max AP +%1$d</string>
	<string name="iteminfo_effect_increase_movecost">Move cost penalty +%1$d AP</string>
	<string name="inventory_assign">Assign quick slot</string>
	<string name="inventory_assign_slot1">Slot 1</string>
	<string name="inventory_assign_slot2">Slot 2</string>
	<string name="inventory_assign_slot3">Slot 3</string>
	<string name="inventory_movetop">Move to top</string>
	<string name="inventory_movebottom">Move to bottom</string>
	<string name="actorinfo_immune_criticals">Immune to critical hits</string>
	<string name="about_button4">About</string>
	<string name="inventory_equip_offhand">Equip (offhand)</string>
	<string name="heroinfo_gamestats_quests">Completed quests</string>
	<string name="heroinfo_gamestats_deaths">Times fallen unconscious</string>
	<string name="heroinfo_gamestats_spent_gold">Gold spent in shops</string>
	<string name="heroinfo_gamestats_bonemeals">Bonemeal potions used</string>
	<string name="heroinfo_gamestats_num_used_items">Items used</string>
	<string name="heroinfo_gamestats_visited_maps">Places visited</string>
	<string name="heroinfo_gamestats_fav_item">Most commonly used item</string>
	<string name="heroinfo_gamestats_num_killed_monsters">Monsters killed</string>
	<string name="heroinfo_gamestats_top_boss">Most powerful monster killed</string>
	<string name="heroinfo_gamestats_fav_monsters">Most commonly killed monsters</string>
</resources>