<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:title="@string/inventory_info" android:id="@+id/inv_menu_info" />
	<item android:title="@string/inventory_equip" android:id="@+id/inv_menu_equip" android:visible="false" />
	<item android:title="@string/inventory_equip_offhand" android:id="@+id/inv_menu_equip_offhand" android:visible="false" />
	<item android:title="@string/inventory_unequip" android:id="@+id/inv_menu_unequip" android:visible="false" />
	<item android:title="@string/inventory_use" android:id="@+id/inv_menu_use" android:visible="false" />
	<item android:title="@string/inventory_drop" android:id="@+id/inv_menu_drop" />
	<item android:id="@+id/inv_menu_assign" android:title="@string/inventory_assign" android:visible="false">
		<menu>
			<item android:id="@+id/inv_assign_slot1" android:title="@string/inventory_assign_slot1"></item>
			<item android:id="@+id/inv_assign_slot2" android:title="@string/inventory_assign_slot2"></item>
			<item android:id="@+id/inv_assign_slot3" android:title="@string/inventory_assign_slot3"></item>
		</menu>
	</item>
	<item android:title="@string/inventory_movetop" android:id="@+id/inv_menu_movetop" />
	<item android:title="@string/inventory_movebottom" android:id="@+id/inv_menu_movebottom" />
</menu>
