<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	>

	<TableRow
		android:id="@+id/traitsinfo_attack_row1"
		>
		<TextView android:text="@string/traitsinfo_attack_cost" android:layout_marginRight="10sp" />
		<TextView android:id="@+id/traitsinfo_attack_cost" />
	</TableRow>
	<TableRow
		android:id="@+id/traitsinfo_attack_row2"
		>
		<TextView android:text="@string/traitsinfo_attack_chance" android:layout_marginRight="10sp" />
		<TextView android:id="@+id/traitsinfo_attack_chance" />
	</TableRow>
	<TableRow
		android:id="@+id/traitsinfo_attack_row3"
		>
		<TextView android:text="@string/traitsinfo_attack_damage" android:layout_marginRight="10sp" />
		<TextView android:id="@+id/traitsinfo_attack_damage" />
	</TableRow>
	<TableRow
		android:id="@+id/traitsinfo_critical_row1"
		>
		<TextView android:text="@string/traitsinfo_criticalhit_chance" android:layout_marginRight="10sp" />
		<TextView android:id="@+id/traitsinfo_criticalhit_chance" />
	</TableRow>
	<TableRow
		android:id="@+id/traitsinfo_critical_row2"
		>
		<TextView android:text="@string/traitsinfo_criticalhit_multiplier" android:layout_marginRight="10sp" />
		<TextView android:id="@+id/traitsinfo_criticalhit_multiplier" />
	</TableRow>
	<TableRow
		android:id="@+id/traitsinfo_defense_row1"
		>
		<TextView android:text="@string/traitsinfo_defense_chance" android:layout_marginRight="10sp" />
		<TextView android:id="@+id/traitsinfo_defense_chance" />
	</TableRow>
	<TableRow
		android:id="@+id/traitsinfo_defense_row2"
		>
		<TextView android:text="@string/traitsinfo_defense_damageresist" android:layout_marginRight="10sp" />
		<TextView android:id="@+id/traitsinfo_defense_damageresist" />
	</TableRow>
</merge>
