<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	>

	<com.gpl.rpg.AndorsTrail.view.TraitsInfoView
		android:id="@+id/abilitymodifierinfo_traits"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		/>

	<TextView 
		android:text="@string/iteminfo_effect_increase_max_hp" 
		android:id="@+id/abilitymodifierinfo_change_maxhp" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		/>
	<TextView 
		android:text="@string/iteminfo_effect_increase_max_ap" 
		android:id="@+id/abilitymodifierinfo_change_maxap" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		/>
	<TextView 
		android:text="@string/iteminfo_effect_increase_movecost" 
		android:id="@+id/abilitymodifierinfo_change_movecost" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		/>

</merge>
