<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="@dimen/dialog_margin"
	android:orientation="vertical"
	>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center_vertical"
		>
		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/icon"
			android:paddingRight="@dimen/dialog_iconpadding_right"
			android:paddingBottom="@dimen/dialog_iconpadding_bottom"
			/>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:gravity="left"
			>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/app_name"
				android:textSize="@dimen/titletext"
				/>
			<TextView
				android:id="@+id/about_version"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@android:string/unknownName"
				/>
		</LinearLayout>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center_vertical"
		>
		<Button
			android:id="@+id/about_button1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/about_button4"
			/>
		<Button
			android:id="@+id/about_button2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/about_button2"
			/>
		<Button
			android:id="@+id/about_button3"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/about_button3"
			/>
		<Button
			android:id="@+id/about_button4"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/about_button1"
			/>
	</LinearLayout>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		>
		<TextView
			android:id="@+id/about_contents"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			/>
	</ScrollView>
</LinearLayout>
