<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:layout_gravity="center_horizontal"
	android:padding="@dimen/dialog_margin"
	>

	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		>
	 
		<LinearLayout
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			>

		  	<LinearLayout 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:gravity="center_vertical">
		
				<ImageView
					android:id="@+id/heroinfo_image"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" 
					android:src="@drawable/char_hero"
					android:paddingRight="@dimen/dialog_iconpadding_right"
					android:paddingBottom="@dimen/dialog_iconpadding_bottom"
					/>
				<TextView
					android:id="@+id/heroinfo_title"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="Name"
					android:textSize="@dimen/titletext"
					/>
			</LinearLayout>
			
			<TableLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/section_margin"
				>
				<TableRow>
					<TextView android:text="@string/heroinfo_level" android:layout_marginRight="10sp" />
					<TextView android:text="1" android:id="@+id/heroinfo_level" />
				</TableRow>
				<TableRow>
					<TextView android:text="@string/heroinfo_totalexperience" android:layout_marginRight="10sp" />
					<TextView android:text="1" android:id="@+id/heroinfo_totalexperience" />
				</TableRow>
				<TableRow>
					<TextView android:text="@string/heroinfo_actionpoints" android:layout_marginRight="10sp" />
					<TextView android:text="10/10" android:id="@+id/heroinfo_ap" />
				</TableRow>
				<TableRow>
					<TextView android:text="@string/actorinfo_movecost" android:layout_marginRight="10sp" />
					<TextView android:text="6" android:id="@+id/heroinfo_movecost" />
				</TableRow>
			</TableLayout>
				
			<com.gpl.rpg.AndorsTrail.view.RangeBar
				android:id="@+id/heroinfo_healthbar"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				/>
			<com.gpl.rpg.AndorsTrail.view.RangeBar
				android:id="@+id/heroinfo_expbar"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="5sp"
				/>

			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/actorinfo_currenttraits"
				android:layout_marginTop="@dimen/section_margin"
				/>
			<com.gpl.rpg.AndorsTrail.view.TraitsInfoView
				android:id="@+id/heroinfo_currenttraits"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				/>
			<com.gpl.rpg.AndorsTrail.view.ItemEffectsView
				android:id="@+id/heroinfo_itemeffects"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				/>
				
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/actorinfo_currentconditions"
				android:id="@+id/heroinfo_currentconditions_title"
				android:layout_marginTop="@dimen/section_margin"
				/>
			<LinearLayout
				android:id="@+id/heroinfo_currentconditions"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:gravity="left"
				/>
			
			
			
		</LinearLayout>
	</ScrollView>

	<LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center_vertical">
		<Button
			android:id="@+id/heroinfo_levelup"
			android:layout_width="0dip"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:text="@string/heroinfo_levelup"
			/>
	</LinearLayout>

</LinearLayout>
